fix zoom out on mobile, readme edit

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,10 +12,13 @@
 @use 'more';
 
 html {
-  max-width: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
+  max-width: 100vw;
+  overflow-x: hidden;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
